@@ -1,0 +1,7 @@
+<!ELEMENT  digest       (title, article+) >
+
+<!ELEMENT  module       (para+) >
+<!ATTLIST  module       date CDATA #REQUIRED >
+
+<!ENTITY % content      SYSTEM  "content.dtd" >
+          %content;
