@@ -1,4 +1,16 @@
 
+Изменения в nginx 1.1.3                                           14.09.2011
+
+    *) Добавление: модуль ngx_http_mp4_module.
+
+    *) Исправление: в Linux AIO, используемым совместно с open_file_cache.
+
+    *) Исправление: open_file_cache не обновлял информацию о файле, если
+       файл был изменён не атомарно.
+
+    *) Исправление: nginx не собирался на MacOSX 10.7.
+
+
 Изменения в nginx 1.1.2                                           05.09.2011
 
     *) Изменение: теперь, если суммарный размер всех диапазонов больше
