@@ -9,6 +9,7 @@
 
 <download last="5" changes="CHANGES">
 
+<item ver="1.1.3" pgp="yes" win="yes" />
 <item ver="1.1.2" pgp="yes" win="yes" />
 <item ver="1.1.1" pgp="yes" win="yes" />
 <item ver="1.1.0" pgp="yes" win="yes" />
