@@ -2,6 +2,14 @@
 
 <news title="nginx news" link="/" lang="en">
 
+<event date="2011-09-14">
+<para>
+<a href="/en/download.xml">nginx-1.1.3</a>
+development version has been released.<br/>
+New <a href="/en/docs/http/ngx_http_mp4_module.xml"/>.
+</para>
+</event>
+
 <event date="2011-09-05">
 <para>
 <a href="/en/download.xml">nginx-1.1.2</a>
