@@ -1,5 +1,5 @@
 <versions>
-<development> 1.1.2 </development>
+<development> 1.1.3 </development>
 <stable> 1.0.6 </stable>
 <legacy_stable> 0.8.55 </legacy_stable>
 </versions>
