@@ -1,0 +1,57 @@
+X:stylesheet {
+
+X:output method="html" indent="no" encoding="utf-8";
+
+X:strip-space elements = "*";
+
+<!--
+  -- a current directory of a XSLT script is where the script is stored,
+  -- but not where XSLT processor has been started to run the script
+  -->
+X:param XML = "'../xml'"; 
+X:param YEAR;
+
+X:var SITE = "'http://nginx.org'";
+X:var LINK = "/module/@link";
+
+X:include href = "dirname.xslt";
+X:include href = "link.xslt";
+X:include href = "style.xslt";
+X:include href = "body.xslt";
+X:include href = "menu.xslt";
+X:include href = "directive.xslt";
+X:include href = "content.xslt";
+X:include href = "versions.xslt";
+
+
+X:template = "/module" {
+    <html><head>
+
+    <title> !{@title} </title>
+
+    !style (lang="/module/@lang")
+
+    </head>
+
+    !body (lang="/module/@lang")
+
+    </html>
+}
+
+
+X:template = "/module[@lang='he']" {
+    <html dir="rtl"><head>
+
+    <title> !{@title} </title>
+
+    !style (lang="/module/@lang")
+
+    </head>
+
+    !body (lang="/module/@lang")
+
+    </html>
+}
+
+
+}
