@@ -3,18 +3,20 @@ X:stylesheet {
 X:template style (lang) {
 
     <style>!{ normalize-space('
-        html             {-webkit-text-size-adjust:none}
+        html             {-webkit-text-size-adjust: none}
         body             { font-family:  Georgia, serif; }
         p                { text-align:   justify; }
         p                { text-indent:  20pt; }
         p.noindent       { text-indent:  0pt; }
+        div.directive    { background:   #EEEEEE;
+                           padding:      10pt 10pt 10pt 20pt; }
         span.initial     { font-size:    200%;
                            float: left; padding-right: 10pt;}
         li               { text-align:   justify; }
         td.list          { background:   #EEEEEE; }
-        blockquote.note  { text-align:   justify; }
-        blockquote.note  { background:   #EEEEEE; border: none; }
-        blockquote.note  { padding:      10pt 10pt 10pt 10pt; }
+        blockquote.note  { text-align:   justify;
+                           background:   #EEEEEE; border: none;
+                           padding:      10pt 10pt 10pt 10pt; }
         ') }
 
     X:if "$lang = 'he'" {
